<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:text="B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Header -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/morning_routine"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Horizontal container for elapsed time and goal input -->
    <LinearLayout
        android:id="@+id/horizontalContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/routine_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/goalTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Enter goal time (minutes)"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/routine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/task_card_edit"
        app:layout_constraintTop_toBottomOf="@id/horizontalContainer"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Container for bottom buttons -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="New Task" />

        <Button
            android:id="@+id/stop_timer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Stop timer" />

        <Button
            android:id="@+id/advance_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Advance time" />

        <Button
            android:id="@+id/end_routine_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="End routine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>