<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="routine_list" type="id" />
</resources>