<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routine_card"
    android:layout_width="match_parent"
    android:layout_height="96dp">

    <TextView
        android:id="@+id/goal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/no_goal_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_title" />

    <TextView
        android:id="@+id/routine_title"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/routine_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/routine_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/routine_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/routine_edit_btn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4B4B4B"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_start_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>